# reflexia

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: memory_eda.ipynb
src/reflexia/: __init__.py  config.py  embeddings.py  graph.py  memory.py  messages.py  prompts.py
src/reflexia/tools/: __init__.py  memory.py  web.py
tests/: test_graph_nodes.py  test_messages.py
